# micrograd

./: .gitignore  .pre-commit-config.yaml  README.md  micrograd.py  pyproject.toml  test_micrograd.py
.github/workflows/: poetry-test.yml
tests/: test_micrograd.py
