[tool.poetry]
name = "micrograd"
version = "0.1.0"
description = ""
authors = ["alkamid"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"
matplotlib = "^3.5.3"
pudb = "^2022.1.2"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
